squash :bug: in code that broke moment()

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,3 +107,6 @@ hr {
     z-index: 101;
 }
 
+#save-beer { 
+    cursor: pointer;
+}
